Adds immutability helper npm and adds functions to update location for given input.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/jmrojas94/which-is-closer#readme",
   "dependencies": {
+    "immutability-helper": "^2.6.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
